fix(object-editor) set overflow to auto

--- a/src/app/json-editor/object-editor/object-editor.component.scss
+++ b/src/app/json-editor/object-editor/object-editor.component.scss
@@ -1,9 +1,9 @@
 :host{
   display: block;
+  overflow: auto;
 }
 :host,
 .wrapper-array{
-  overflow: hidden;
   margin-left: 19px;
   padding-left: 16px;
   border-left: 1px solid rgba($color: #000000, $alpha: .12);
